--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/styled-components": "^5.1.34",
     "date-fns": "^3.3.1",
+    "immer": "^10.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
